[project]
name = "wxflow"
version = "0.1.0"
description = "Tools for Weather Workflows"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.md"}
keywords = ["NWP", "Workflow"]
authors = [
  {name = "NOAA/NWS/NCEP/EMC", email = "First.Last@noaa.gov" }
]
maintainers = [
  {name = "NOAA/NWS/NCEP/EMC", email = "First.Last@noaa.gov" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy>=1.21.6",
  "PyYAML>=6.0",
  "Jinja2>=3.1.2"
]

[project.optional-dependencies]
dev = ["check-manifest", "pytest>=7", "pytest-cov[all]"]
test = ["pytest>=7", "pytest-cov[all]"]
lint = ["pycodestyle"]

[project.urls]
"Homepage" = "https://github.com/NOAA-EMC/wxflow"
"Bug Reports" = "https://github.com/NOAA-EMC/wxflow/issues"
"Source" = "https://github.com/NOAA-EMC/wxflow/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
